# perp_cnn

./: .gitignore  README.md  bowtips.yaml  data.yaml  main.py  pyproject.toml  requirements.txt
perp_cnn/: __init__.py  model.py
scripts/: generate_yolo_from_bowtips.py  label_points.py  predict.py  split.py  train.py  utils.py  visualize.py
